# jjrf-data-reliability-book

./: .gitignore  .markdownlint-cli2.jsonc  404.html  ADVANCED_APPLICATIONS.html  APPENDICES.html  AUTHOR.html  BACK_COVER.html  BOOK.html  CNAME  CONCEPTS.html  COVER.html  Cargo.toml  DEDICATION.html  DICTIONARY.html  Dockerfile  Dockerfile.dev  EPILOGUE.html  FOREWORD.html  FOUNDATIONS.html  LICENSE  Makefile  NEXT.html  OBJECTIVES.html  PRACTICAL_METHODOLOGIES.html  PREFACE.html  PROFESSIONALS.html  README.md  REFERENCES.html  STRUCTURE.html  SUMMARY.html  TITLE.html  backlog.html  book.backup.toml  book.toml  compose-dev.yaml  docker-compose.yml  index.html  main.rs  print.html  searchindex.js  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
ci/: build-mdbook.sh  docker-mdbook-serve.sh  install-hub.sh
concepts/: application_tier.html  attributes.html  data_architecture.html  data_lake.html  data_lakehouse.html  data_management_processes.html  data_marts.html  data_modelling.html  data_quality.html  data_quality_conclusions.html  data_quality_foundations.html  data_quality_intro.html  data_quality_management.html  data_quality_master_data.html  data_quality_models.html  data_relibility.html  data_sources.html  data_tier.html  data_warehouse.html  data_warehouse_application_tier.html  data_warehouse_tier_architecture.html  fault_prediction.html  fault_prevention_avoidance.html  fault_prevention_elimination.html  fault_tolerance.html  impediments.html  master_data.html  mechanisms.html  metadata_management_tools.html  operational_data_stores.html  operations.html  processes.html  (+4 more)
(+325 files in other folders)
