[package]
name = "jjrf-data-reliability-book"
authors = ["Jefferson Roth <jjrothfilho@gmail.com>"]

[dependencies]
mdbook = "0.4.27"
mdbook-linkcheck = "0.7.7"
mdbook-man = "0.1.0"
mdbook-mermaid = "0.12.6"
mdbook-plantuml = "0.8.0"
mdbook-admonish = "1.8.0"
mdbook-catppuccin = "0.1.1"
mdbook-pdf = "0.1.5"
mdbook-template = "1.1.0"
mdbook-toc = "0.11.2"
mdbook-svgbob = "0.2.1"